--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:constraint_referenced_ids="a_main_loading_bg
-                                    ,a_main_loading_view
-                                    ,a_main_loading_full_bg"/>
-    <View
-        android:id="@+id/a_main_loading_full_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/c_f5f5f5"
-        />
+                                    ,a_main_loading_view"/>
 
     <View
         android:id="@+id/a_main_loading_bg"
@@ -43,10 +36,10 @@
 
     <View
         android:id="@+id/a_main_loading_view"
-        android:layout_width="181.5dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="@dimen/main_loading_view_width"
+        android:layout_height="@dimen/main_loading_view_height"
+        android:layout_marginTop="@dimen/main_loading_view_margin_top"
+        android:layout_marginBottom="@dimen/main_loading_view_margin_bottom"
         app:layout_constraintStart_toStartOf="@+id/a_main_loading_bg"
         app:layout_constraintEnd_toEndOf="@+id/a_main_loading_bg"
         app:layout_constraintBottom_toBottomOf="@+id/a_main_loading_bg"
