--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 
     <color name="c_354187">#354187</color>
     <color name="c_f5f5f5">#f5f5f5</color>
+    <color name="c_000000">#000000</color>
 </resources>
