[Update] 클릭시 토스트 문구 변경 - idx + 타이틀 노출로 변경 - Staggered 일 때 토스트 노출되지 않는 현상 수정

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <!-- view setTag key id -->
     <attr name="key_grid_pos" format="integer" />
+    <attr name="key_grid_idx" format="integer" />
     <attr name="key_grid_title" format="reference" />
 </resources>
