--- a/app/src/main/res/layout/i_list_default.xml
+++ b/app/src/main/res/layout/i_list_default.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/i_list_default_root"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/view_type_default_height"
-    android:paddingLeft="@dimen/view_type_default_padding_left"
-    android:paddingRight="@dimen/view_type_default_padding_right">
+    android:layout_height="@dimen/view_type_default_height">
 
     <ImageView
         android:id="@+id/i_list_default_image_view"
